Remove tools subtitle, update tool icons to match theme

--- a/en.html
+++ b/en.html
@@ -118,16 +118,15 @@
     <section id="tools" class="tools">
         <div class="container">
             <h2 class="section-title">Free Tools</h2>
-            <p class="section-subtitle">Explore our collection of useful tools for developers and designers.</p>
             <div class="tools-grid">
                 <div class="tool-card">
-                    <div class="tool-icon">🔤</div>
+                    <div class="tool-icon">✏️</div>
                     <h3>GoogleFont2SVG</h3>
                     <p>Convert Google Fonts to SVG paths for high-quality vector graphics. Perfect for designers and developers needing scalable font-based icons and text.</p>
                     <a href="tools/googlefont2svg/" class="btn btn-tool">Try It Now</a>
                 </div>
                 <div class="tool-card">
-                    <div class="tool-icon">🔄</div>
+                    <div class="tool-icon">⚡</div>
                     <h3>Universal File Converter</h3>
                     <p>Convert files between various formats - from videos to PDFs, images to documents, and more. A truly universal online converter.</p>
                     <a href="tools/converter/" class="btn btn-tool">Try It Now</a>
