--- a/index.html
+++ b/index.html
@@ -118,16 +118,15 @@
     <section id="tools" class="tools">
         <div class="container">
             <h2 class="section-title">Bezplatné Nástroje</h2>
-            <p class="section-subtitle">Prozkoumejte naši kolekci užitečných nástrojů pro vývojáře a designéry.</p>
             <div class="tools-grid">
                 <div class="tool-card">
-                    <div class="tool-icon">🔤</div>
+                    <div class="tool-icon">✏️</div>
                     <h3>GoogleFont2SVG</h3>
                     <p>Převeďte písma Google Fonts na SVG cesty pro vysoce kvalitní vektorovou grafiku. Ideální pro designéry a vývojáře.</p>
                     <a href="tools/googlefont2svg/" class="btn btn-tool">Vyzkoušet</a>
                 </div>
                 <div class="tool-card">
-                    <div class="tool-icon">🔄</div>
+                    <div class="tool-icon">⚡</div>
                     <h3>Univerzální Převodník Souborů</h3>
                     <p>Převeďte soubory mezi různými formáty - videa, PDF, obrázky, dokumenty a další. Skutečně univerzální online převodník.</p>
                     <a href="tools/converter/" class="btn btn-tool">Vyzkoušet</a>
