Major rebrand: Focus on general automation services

--- a/en.html
+++ b/en.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIPlay – Local AI Agents | Privacy-First & Open-Source Solutions</title>
-    <meta name="description" content="Build and deploy custom local AI agents with full data privacy. No cloud lock-in, no subscriptions. Open-source automations for businesses. Free consultation – Liberec, Czech Republic.">
-    <meta name="keywords" content="local AI agents, open source AI, privacy first AI, AI automation, local deployment AI, offline AI, custom AI agents, Liberec AI freelancer">
+    <title>RIPlay – Automation for Business | Save Time and Costs</title>
+    <meta name="description" content="We provide automation services for individuals and small to mid-sized businesses. Streamline processes, eliminate repetitive tasks, and focus on what matters.">
+    <meta name="keywords" content="automation, workflow automation, AI automation, process automation, save time, productivity, business automation, Liberec">
     <meta name="robots" content="index, follow">
     <meta name="author" content="RIPlay – Stan Wesly">
     <link rel="canonical" href="https://riplay.cz/en.html">
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "RIPlay – Local AI Agent Solutions",
-      "description": "Custom local AI agents – privacy first, open source, no cloud dependency",
+      "name": "RIPlay – Automation for Business",
+      "description": "Automation services for individuals and small to mid-sized businesses. Streamline processes and save time.",
       "url": "https://riplay.cz/en.html",
       "logo": "https://riplay.cz/logo-trans-bkgr.png",
       "telephone": "+420776479855",
@@ -55,7 +55,7 @@
     <header class="hero">
         <nav class="navbar">
             <div class="logo">
-                <img src="logo-trans-bkgr.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
+                <img src="logo-trans-bkgr.png" alt="RIPlay Logo" width="180" height="60">
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
@@ -64,14 +64,14 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="lang-toggle">
-                <a href="index.html"><img src="img/cs.png" alt="Czech language – Český" width="32" height="20"></a>
+                <a href="index.html"><img src="img/cs.png" alt="Czech language" width="32" height="20"></a>
             </div>
         </nav>
         <div class="hero-content">
-            <h1>Local AI Agents<br>Built for Your Business</h1>
-            <p class="hero-subtitle">As an IT freelancer, I offer open-source, ecosystem-free AI automations and agents that run locally on your systems. Full ownership, max privacy, no subscriptions or lock-ins.</p>
+            <h1>Automation<br>That Works</h1>
+            <p class="hero-subtitle">Helping businesses save time and money through intelligent automation. From simple workflows to complex AI solutions – everything tailored to your needs.</p>
             <div class="hero-cta">
-                <a href="#contact" class="btn btn-primary">Get Started</a>
+                <a href="#contact" class="btn btn-primary">Free Consultation</a>
                 <a href="#services" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
@@ -80,36 +80,37 @@
     <section id="services" class="services">
         <div class="container">
             <h2 class="section-title">Our Services</h2>
+            <p class="section-subtitle">Comprehensive solutions for your business automation</p>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon">🔧</div>
-                    <h3>Custom Agent Development</h3>
-                    <p>Tailored AI agents designed to meet your specific business requirements. From customer support to data analysis, we build agents that integrate seamlessly with your workflows.</p>
+                    <div class="service-icon">⚙️</div>
+                    <h3>Workflow Automation</h3>
+                    <p>Automate repetitive processes and free up time for important tasks. From emails to complex approval workflows.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🚀</div>
-                    <h3>Local Deployment</h3>
-                    <p>We deploy agents on your local infrastructure, ensuring complete data sovereignty, low latency, and no ongoing cloud costs. Your data stays yours.</p>
+                    <div class="service-icon">🔗</div>
+                    <h3>System Integration</h3>
+                    <p>Connect your tools and applications into one functional system. No more manual data transfer between systems.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🛠️</div>
-                    <h3>Maintenance & Support</h3>
-                    <p>Ongoing maintenance, updates, and technical support to keep your agents running smoothly. We handle the complexity so you can focus on results.</p>
+                    <div class="service-icon">🤖</div>
+                    <h3>AI Solutions</h3>
+                    <p>Leverage artificial intelligence for data analysis, customer support, or automated communication.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📈</div>
-                    <h3>Performance Optimization</h3>
-                    <p>Continuous monitoring and optimization to ensure your agents operate at peak efficiency. We fine-tune models and infrastructure for maximum ROI.</p>
+                    <div class="service-icon">📊</div>
+                    <h3>Data Processing</h3>
+                    <p>Automatic data extraction, transformation, and reporting. Clear dashboards and regular reports without manual work.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🔒</div>
-                    <h3>Security & Compliance</h3>
-                    <p>Enterprise-grade security for your local AI deployment. We ensure compliance with data protection regulations and industry best practices.</p>
+                    <div class="service-icon">📧</div>
+                    <h3>Email Automation</h3>
+                    <p>Automate outreach, follow-ups, and responses. Personalized communication at scale.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🎓</div>
-                    <h3>Training & Knowledge Transfer</h3>
-                    <p>Comprehensive training for your team to manage and customize agents independently. We empower you to own your AI infrastructure.</p>
+                    <h3>Training & Support</h3>
+                    <p>Teach your team to manage automations. Complete documentation and ongoing support included.</p>
                 </div>
             </div>
         </div>
@@ -122,13 +123,13 @@
                 <div class="tool-card">
                     <div class="tool-icon">✏️</div>
                     <h3>GoogleFont2SVG</h3>
-                    <p>Convert Google Fonts to SVG paths for high-quality vector graphics. Perfect for designers and developers needing scalable font-based icons and text.</p>
+                    <p>Convert Google Fonts to SVG paths for high-quality vector graphics. Perfect for designers and developers.</p>
                     <a href="tools/googlefont2svg/" class="btn btn-tool">Try It Now</a>
                 </div>
                 <div class="tool-card">
                     <div class="tool-icon">⚡</div>
                     <h3>Universal File Converter</h3>
-                    <p>Convert files between various formats - from videos to PDFs, images to documents, and more. A truly universal online converter.</p>
+                    <p>Convert files between various formats - videos, PDF, images, documents and more. A truly universal online converter.</p>
                     <a href="tools/converter/" class="btn btn-tool">Try It Now</a>
                 </div>
             </div>
@@ -139,19 +140,19 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Why Local AI Agents?</h2>
-                    <p>Local AI agents offer unprecedented advantages over cloud-based solutions:</p>
+                    <h2>Why Automation?</h2>
+                    <p>Automation isn't just about saving time – it's about strategically growing your business.</p>
                     <ul>
-                        <li><strong>Complete Privacy:</strong> Your sensitive data never leaves your premises.</li>
-                        <li><strong>Cost Effective:</strong> No recurring subscription fees - pay once, own forever.</li>
-                        <li><strong>Low Latency:</strong> Instant responses without network delays.</li>
-                        <li><strong>Full Customization:</strong> Tailor every aspect to your exact needs.</li>
-                        <li><strong>Offline Operation:</strong> Works without internet connectivity.</li>
+                        <li><strong>Time Savings:</strong> Eliminate repetitive tasks and focus on growth.</li>
+                        <li><strong>Lower Costs:</strong> Less manual work means lower operational costs.</li>
+                        <li><strong>Fewer Errors:</strong> Automated processes are consistent and error-free.</li>
+                        <li><strong>Scalability:</strong> Handle more work without increasing staff.</li>
+                        <li><strong>Competitive Edge:</strong> Be faster and more efficient than competitors.</li>
                     </ul>
-                    <p>At RIPlay, we specialize in bringing the power of local AI to businesses of all sizes. Our expertise ensures you get the benefits of cutting-edge AI without the drawbacks of cloud dependency.</p>
+                    <p>I work with businesses to create custom solutions that actually work and deliver results.</p>
                 </div>
                 <div class="ai-visual">
-                    <div class="ai-brain">🧠</div>
+                    <div class="ai-brain">🚀</div>
                     <div class="ai-nodes">
                         <span class="node">●</span>
                         <span class="node">●</span>
@@ -167,12 +168,12 @@
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Let's Discuss Your AI Needs</h3>
-                    <p>Ready to explore local AI agents for your business? Contact us for a free consultation. 5.0 stars on Google from 6 reviews.</p>
+                    <h3>Let's Discuss Your Needs</h3>
+                    <p>Ready to automate your business? Free consultation. 5.0 stars on Google from 6 reviews.</p>
                     <div class="contact-details">
                         <p>Email: <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
                         <p>Phone: <a href="tel:+420776479855">+420 776 479 855</a></p>
-                        <p>Address: Mokra 68, 460 01 Liberec-Machnin, Czech Republic</p>
+                        <p>Address: Mokrá 68, 460 01 Liberec-Machnín, Czech Republic</p>
                         <p>GitHub: <a href="https://github.com/Aeell">github.com/Aeell</a></p>
                         <p><a href="https://g.co/kgs/5m6Z8q2" target="_blank">View on Google Maps</a></p>
                     </div>
@@ -185,7 +186,7 @@
                         <input type="email" name="email" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea name="message" rows="5" placeholder="Tell us about your project" required></textarea>
+                        <textarea name="message" rows="5" placeholder="Describe your project or automation needs" required></textarea>
                     </div>
                     <input type="hidden" name="_subject" value="New RIPlay inquiry from website">
                     <button type="submit" class="btn btn-primary">Send Message</button>
@@ -198,9 +199,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo-trans-bkgr.png" alt="RIPlay – Local AI Agents Logo" width="180" height="60">
+                    <img src="logo-trans-bkgr.png" alt="RIPlay Logo" width="180" height="60">
                 </div>
-                <p class="footer-tagline">Local AI Agents for Modern Businesses</p>
+                <p class="footer-tagline">Automation for Modern Businesses</p>
                 <div class="footer-links">
                     <a href="#services">Services</a>
                     <a href="#tools">Tools</a>
