--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIPlay – Lokální AI Agenti | Soukromí na prvním místě & Open-Source</title>
-    <meta name="description" content="Vývoj a nasazení vlastních lokálních AI agentů s maximálním soukromím. Žádný cloud, žádné předplatné. Open-source automatizace pro firmy. Bezplatná konzultace – Liberec.">
-    <meta name="keywords" content="lokální AI agenti, open source AI, soukromí AI, AI automatizace, lokální nasazení AI, offline AI, vlastní AI agenti, AI freelancer Liberec">
+    <title>RIPlay – Automatizace pro Firmy | Úspora Času a Nákladů</title>
+    <meta name="description" content="Nabízíme služby automatizace pro jednotlivce a malé až střední firmy. Zefektivněte procesy, eliminujte repetitivní úkoly a soustřeďte se na to, co je důležité.">
+    <meta name="keywords" content="automatizace, workflow automatizace, AI automatizace, procesní automatizace, úspora času, produktivita, automatizace pro firmy, Liberec">
     <meta name="robots" content="index, follow">
     <meta name="author" content="RIPlay – Stan Wesly">
     <link rel="canonical" href="https://riplay.cz/">
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "RIPlay – Lokální AI Agent Solutions",
-      "description": "Vlastní lokální AI agenti – soukromí na prvním místě, open source, bez závislosti na cloudu",
+      "name": "RIPlay – Automatizace pro Firmy",
+      "description": "Služby automatizace pro jednotlivce a malé až střední firmy. Zefektivněte procesy a ušetřete čas.",
       "url": "https://riplay.cz/",
       "logo": "https://riplay.cz/logo-trans-bkgr.png",
       "telephone": "+420776479855",
@@ -55,7 +55,7 @@
     <header class="hero">
         <nav class="navbar">
             <div class="logo">
-                <img src="logo-trans-bkgr.png" alt="RIPlay – Lokální AI Agenti Logo" width="180" height="60">
+                <img src="logo-trans-bkgr.png" alt="RIPlay Logo" width="180" height="60">
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Služby</a></li>
@@ -68,11 +68,11 @@
             </div>
         </nav>
         <div class="hero-content">
-            <h1>Lokální AI Agenti<br>Pro Vaše Podnikání</h1>
-            <p class="hero-subtitle">Jako IT freelancer nabízím open-source, bez ekosystémového závislosti AI automatizace a agenty, které běží lokálně na vašich systémech. Plné vlastnictví, maximální soukromí, žádné předplatné nebo uzamčení.</p>
+            <h1>Automatizace<br>Která Funguje</h1>
+            <p class="hero-subtitle">Pomáhám firmám šetřit čas a peníze prostřednictvím inteligentní automatizace. Od jednoduchých workflow po komplexní AI řešení – vše přizpůsobeno vašim potřebám.</p>
             <div class="hero-cta">
-                <a href="#contact" class="btn btn-primary">Začít</a>
-                <a href="#services" class="btn btn-secondary">Více info</a>
+                <a href="#contact" class="btn btn-primary">Nezávazná Konzultace</a>
+                <a href="#services" class="btn btn-secondary">Zjistit Více</a>
             </div>
         </div>
     </header>
@@ -80,36 +80,37 @@
     <section id="services" class="services">
         <div class="container">
             <h2 class="section-title">Naše Služby</h2>
+            <p class="section-subtitle">Komplexní řešení pro automatizaci vašeho byznysu</p>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon">🔧</div>
-                    <h3>Vývoj Agentů Na Míru</h3>
-                    <p>AI agenti přesně podle vašich potřeb – od podpory zákazníků přes analýzu dat až po automatizaci procesů. Plně open-source a integrovatelné do vašich systémů.</p>
+                    <div class="service-icon">⚙️</div>
+                    <h3>Workflow Automatizace</h3>
+                    <p>Automatizujte opakující se procesy a uvolněte čas pro důležitější úkoly. Od e-mailů po složité schvalovací procesy.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🚀</div>
-                    <h3>Lokální Nasazení</h3>
-                    <p>Nasadíme agenty přímo u vás – žádný cloud, žádné měsíční poplatky, data zůstávají vaše. Nízká latence a provoz i offline.</p>
+                    <div class="service-icon">🔗</div>
+                    <h3>Integrace Systémů</h3>
+                    <p>Propojte vaše nástroje a aplikace do jednoho funkčního celku. Žádné manuální přepisování dat mezi systémy.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🛠️</div>
-                    <h3>Údržba a Podpora</h3>
-                    <p>Pravidelné aktualizace, monitoring a rychlá pomoc. Starám se o techniku, vy se soustředíte na byznys.</p>
+                    <div class="service-icon">🤖</div>
+                    <h3>AI Řešení</h3>
+                    <p>Využijte sílu umělé inteligence pro analýzu dat, zákaznickou podporu nebo automatizovanou komunikaci.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📈</div>
-                    <h3>Optimalizace Výkonu</h3>
-                    <p>Průběžné ladění modelů a infrastruktury pro nejlepší výsledky a efektivitu.</p>
+                    <div class="service-icon">📊</div>
+                    <h3>Zpracování Dat</h3>
+                    <p>Automatická extrakce, transformace a reporting dat. Přehledné dashboardy a pravidelné reporty bez manuální práce.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🔒</div>
-                    <h3>Bezpečnost a Compliance</h3>
-                    <p>Enterprise-level zabezpečení pro lokální AI. Soulad s GDPR a dalšími předpisy.</p>
+                    <div class="service-icon">📧</div>
+                    <h3>Email Automatizace</h3>
+                    <p>Automatizujte oslovování, follow-up zprávy a odpovědi. Personalizovaná komunikace ve velkém měřítku.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🎓</div>
-                    <h3>Školení a Předání Znalostí</h3>
-                    <p>Naučím váš tým samostatně spravovat a upravovat agenty – plná nezávislost.</p>
+                    <h3>Školení a Podpora</h3>
+                    <p>Naučím váš tým spravovat automatizace. Kompletní dokumentace a průběžná podpora zajištěna.</p>
                 </div>
             </div>
         </div>
@@ -139,19 +140,19 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Proč Lokální AI Agenti?</h2>
-                    <p>Lokální řešení přináší výhody, které cloud nikdy nenabídne:</p>
+                    <h2>Proč Automatizace?</h2>
+                    <p>Automatizace není jen o úspoře času – je o strategickém růstu vašeho byznysu.</p>
                     <ul>
-                        <li><strong>Kompletní Soukromí:</strong> Data nikdy neopustí vaše servery.</li>
-                        <li><strong>Bez Předplatného:</strong> Platíte jednou, vlastníte navždy.</li>
-                        <li><strong>Nízká Latence:</strong> Okamžité reakce bez síťového zpoždění.</li>
-                        <li><strong>Plná Přizpůsobitelnost:</strong> Měníte cokoli podle potřeby.</li>
-                        <li><strong>Offline Provoz:</strong> Funguje i bez internetu.</li>
+                        <li><strong>Úspora Času:</strong> Eliminujte repetitivní úkoly a soustřeďte se na růst.</li>
+                        <li><strong>Nižší Náklady:</strong> Méně manuální práce znamená nižší provozní náklady.</li>
+                        <li><strong>Menší Chybovost:</strong> Automatizované procesy jsou konzistentní a bez chyb.</li>
+                        <li><strong>Škálovatelnost:</strong> Zvládněte více práce bez navyšování personálu.</li>
+                        <li><strong>Konkurenční Výhoda:</strong> Buďte rychlejší a efektivnější než konkurence.</li>
                     </ul>
-                    <p>Specializuji se na open-source AI, které dává firmám kontrolu zpět do rukou – bez ekosystémů a vendorů.</p>
+                    <p>Spolupracuji s firmami na míru řešení, která skutečně fungují a přinášejí výsledky.</p>
                 </div>
                 <div class="ai-visual">
-                    <div class="ai-brain">🧠</div>
+                    <div class="ai-brain">🚀</div>
                     <div class="ai-nodes">
                         <span class="node">●</span>
                         <span class="node">●</span>
@@ -167,12 +168,12 @@
             <h2 class="section-title">Kontaktujte Nás</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Pojďme Probrat Vaše Potřeby v AI</h3>
-                    <p>Připraveni prozkoumat lokální AI agenty pro váš byznys? Bezplatná konzultace. 5.0 hvězdiček na Google z 6 recenzí.</p>
+                    <h3>Pojďme Probrat Vaše Potřeby</h3>
+                    <p>Připraveni automatizovat váš byznys? Nezávazná konzultace. 5.0 hvězdiček na Google z 6 recenzí.</p>
                     <div class="contact-details">
                         <p>Email: <a href="mailto:stanwesly@protonmail.com">stanwesly@protonmail.com</a></p>
                         <p>Telefon: <a href="tel:+420776479855">+420 776 479 855</a></p>
-                        <p>Adresa: Mokra 68, 460 01 Liberec-Machnin, Česká republika</p>
+                        <p>Adresa: Mokrá 68, 460 01 Liberec-Machnín, Česká republika</p>
                         <p>GitHub: <a href="https://github.com/Aeell">github.com/Aeell</a></p>
                         <p><a href="https://g.co/kgs/5m6Z8q2" target="_blank">Zobrazit na Google Maps</a></p>
                     </div>
@@ -185,7 +186,7 @@
                         <input type="email" name="email" placeholder="Váš Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea name="message" rows="5" placeholder="Popište svůj projekt" required></textarea>
+                        <textarea name="message" rows="5" placeholder="Popište svůj projekt nebo potřebu automatizace" required></textarea>
                     </div>
                     <input type="hidden" name="_subject" value="Nová poptávka RIPlay z webu">
                     <button type="submit" class="btn btn-primary">Odeslat Zprávu</button>
@@ -198,9 +199,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo-trans-bkgr.png" alt="RIPlay – Lokální AI Agenti Logo" width="180" height="60">
+                    <img src="logo-trans-bkgr.png" alt="RIPlay Logo" width="180" height="60">
                 </div>
-                <p class="footer-tagline">Lokální AI Agenti Pro Moderní Firmy</p>
+                <p class="footer-tagline">Automatizace Pro Moderní Firmy</p>
                 <div class="footer-links">
                     <a href="#services">Služby</a>
                     <a href="#tools">Nástroje</a>
