--- a/tools/googlefont2svg/index.html
+++ b/tools/googlefont2svg/index.html
@@ -8,7 +8,11 @@
     <meta name="keywords" content="font to svg, google fonts to svg, text to svg, font converter, svg font generator, vector text, laser cutting font, cnc font, free font converter, online svg converter, ttf to svg, otf to svg, woff to svg">
     <meta name="robots" content="index, follow">
     <meta name="author" content="RIPlay">
+    <meta name="theme-color" content="#e85d26">
     <link rel="canonical" href="https://riplay.cz/tools/googlefont2svg/">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
