fix: favicon 404, manifest paths, logo layout for GitHub Pages /riplay/ subdirectory

--- a/tools/converter/index.html
+++ b/tools/converter/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#e85d26">
   <link rel="canonical" href="https://riplay.cz/tools/converter/">
   <link rel="alternate" hreflang="en" href="https://riplay.cz/tools/converter/">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="../../favicon.svg" type="image/svg+xml">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -162,8 +162,8 @@
        ═══════════════════════════════════════════════════════════════════ -->
   <header class="converter-header">
     <div class="converter-header-inner">
-      <a href="/" class="converter-brand">
-        <img src="logo.png" alt="RIPlay" class="converter-logo">
+      <a href="../../index.html" class="converter-brand">
+        <img src="logo.png" alt="RIPlay" class="converter-logo" width="36" height="36">
         <span class="converter-brand-text">RIPLAY</span>
       </a>
       <nav class="converter-nav">
@@ -172,7 +172,7 @@
       </nav>
       <div class="converter-actions">
         <button class="converter-mode-toggle" id="mode-button" title="Toggle Advanced Mode">Advanced mode</button>
-        <a href="/" class="converter-back-btn" title="Back to RIPlay">
+        <a href="../../index.html" class="converter-back-btn" title="Back to RIPlay">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true">
             <path d="M10 12L6 8l4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
