--- a/en.html
+++ b/en.html
@@ -163,8 +163,8 @@
        ================================================================ -->
   <nav class="rds-nav" role="navigation" aria-label="Main navigation">
     <div class="rds-container rds-nav-container">
-      <a href="/en.html" class="rds-nav-brand">
-        <img src="logo.png" alt="RIPlay" class="rds-nav-logo">
+      <a href="en.html" class="rds-nav-brand">
+        <img src="logo.png" alt="RIPlay" class="rds-nav-logo" width="36" height="36">
         <span class="rds-nav-brand-text rds-mono">RIPLAY</span>
       </a>
       <button class="rds-hamburger" aria-label="Menu" aria-expanded="false">
@@ -579,7 +579,7 @@
         <!-- Brand column -->
         <div class="footer-brand">
           <div class="footer-brand-logo">
-            <img src="logo.png" alt="RIPlay">
+            <img src="logo.png" alt="RIPlay" width="32" height="32">
             <span class="rds-mono">RIPLAY</span>
           </div>
           <p class="footer-tagline">Automation for modern businesses. Free online tools for everyone.</p>
