Fix: VPS deployment improvements and UI enhancements

--- a/tools/googlefont2svg/index.html
+++ b/tools/googlefont2svg/index.html
@@ -84,7 +84,7 @@
                 <summary>Font Settings</summary>
                 <div class="details-content">
                     <div class="label-with-link">
-                        <label>Google font:</label>
+                        <label for="font-select">Google font:</label>
                         <a href="https://fonts.google.com/" target="_blank" rel="noopener noreferrer">
                             Browse fonts ↗
                         </a>
