--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <nav class="rds-nav" role="navigation" aria-label="Hlavní navigace">
     <div class="rds-container rds-nav-container">
       <a href="index.html" class="rds-nav-brand">
-        <img src="logo.png" alt="RIPlay" class="rds-nav-logo" width="36" height="36">
+        <img src="rip-icon-transperant.png" alt="RIPlay" class="rds-nav-logo" width="36" height="36">
         <span class="rds-nav-brand-text rds-mono">RIPLAY</span>
       </a>
       <button class="rds-hamburger" aria-label="Menu" aria-expanded="false">
@@ -627,7 +627,7 @@
         <!-- Brand column -->
         <div class="footer-brand">
           <div class="footer-brand-logo">
-            <img src="logo.png" alt="RIPlay" width="32" height="32">
+            <img src="rip-icon-transperant.png" alt="RIPlay" width="32" height="32">
             <span class="rds-mono">RIPLAY</span>
           </div>
           <p class="footer-tagline">Automatizace pro moderní firmy. Bezplatné online nástroje pro každého.</p>
