Fix: Use black logo variant for dark background compatibility

--- a/tools/converter/index.html
+++ b/tools/converter/index.html
@@ -163,7 +163,7 @@
   <header class="converter-header">
     <div class="converter-header-inner">
       <a href="../../index.html" class="converter-brand">
-        <img src="rip-icon-transperant.png" alt="RIPlay" class="converter-logo" width="36" height="36">
+        <img src="rip-icon-black.png" alt="RIPlay" class="converter-logo" width="36" height="36">
         <span class="converter-brand-text">RIPLAY</span>
       </a>
       <nav class="converter-nav">
