--- a/tools/googlefont2svg/index.html
+++ b/tools/googlefont2svg/index.html
@@ -69,7 +69,7 @@
     <header class="top-header">
         <div class="header-content">
             <a href="../../index.html" class="logo-link" title="Back to RIPlay">
-                <img src="../../rip-icon-transperant.png" alt="RIPlay Logo" class="logo-img" width="36" height="36">
+                <img src="../../rip-icon-black.png" alt="RIPlay Logo" class="logo-img" width="36" height="36">
             </a>
             <div class="header-title">
                 <a href="index.html">GoogleFont2SVG</a>
