--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#e85d26">
 
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FWR9G2XB2W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-FWR9G2XB2W');
+  </script>
+
   <!-- JSON-LD: LocalBusiness -->
   <script type="application/ld+json">
   {
