--- a/tools/converter/index.html
+++ b/tools/converter/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FWR9G2XB2W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-FWR9G2XB2W');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <title>Universal File Converter — CAD/CAM, Video, Image, Document | RIPlay</title>
   <meta name="description" content="Free online file converter supporting 100+ formats including CAD/CAM (STL, OBJ, DXF, 3MF), video, audio, images, and documents. 100% client-side — your files never leave your browser.">
