--- a/tools/googlefont2svg/index.html
+++ b/tools/googlefont2svg/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FWR9G2XB2W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FWR9G2XB2W');
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoogleFont2SVG - Free Online Font to SVG Converter | RIPlay Tools</title>
     <meta name="description" content="Convert Google Fonts to SVG paths online for free. Transform any text into scalable vector graphics. Perfect for laser cutting, CNC, web design, and print. No registration required.">
