--- a/tools/converter/index.html
+++ b/tools/converter/index.html
@@ -17,10 +17,10 @@
     function loadGA4() {
       var script = document.createElement('script');
       script.async = true;
-      script.src = 'https://www.googletagmanager.com/gtag/js?id=G-FWR9G2XB2W';
+      script.src = 'https://www.googletagmanager.com/gtag/js?id=G-K93YKBS0JP';
       document.head.appendChild(script);
       gtag('js', new Date());
-      gtag('config', 'G-FWR9G2XB2W');
+      gtag('config', 'G-K93YKBS0JP');
     }
     
     function acceptCookies() {
