feat: Add complete Toolbox ecosystem with 5 tools

--- a/de.html
+++ b/de.html
@@ -147,6 +147,7 @@
       <div class="rds-nav-links">
         <a href="#usecases" class="rds-nav-link">Anwendungsfälle</a>
         <a href="#tools" class="rds-nav-link">Tools</a>
+        <a href="tools/de.html" class="rds-nav-link">Toolbox</a>
         <a href="#why" class="rds-nav-link">Warum</a>
         <a href="#contact" class="rds-nav-link">Kontakt</a>
         <div class="lang-switch">
