--- a/en.html
+++ b/en.html
@@ -147,6 +147,7 @@
       <div class="rds-nav-links">
         <a href="#usecases" class="rds-nav-link">Use Cases</a>
         <a href="#tools" class="rds-nav-link">Tools</a>
+        <a href="tools/en.html" class="rds-nav-link">Toolbox</a>
         <a href="#why" class="rds-nav-link">Why</a>
         <a href="#contact" class="rds-nav-link">Contact</a>
         <div class="lang-switch">
