--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
       <div class="rds-nav-links">
         <a href="#usecases" class="rds-nav-link">Použití</a>
         <a href="#tools" class="rds-nav-link">Nástroje</a>
+        <a href="tools/" class="rds-nav-link">Toolbox</a>
         <a href="#why" class="rds-nav-link">Proč</a>
         <a href="#contact" class="rds-nav-link">Kontakt</a>
         <div class="lang-switch">
