--- a/tools/googlefont2svg/index.html
+++ b/tools/googlefont2svg/index.html
@@ -104,6 +104,8 @@
     <script src="lib/browser.maker.js" type="text/javascript"></script>
     <script src="lib/bezier.js"></script>
     <script src="opentype.js" type="text/javascript"></script>
+    <!-- API Key config - create config.js with your key (not committed to repo) -->
+    <script src="config.js"></script>
 </head>
 <body>
     <header class="top-header">
